fixed button icon spacing

--- a/src/components/SortingApp/SortingApp.module.scss
+++ b/src/components/SortingApp/SortingApp.module.scss
@@ -14,6 +14,9 @@
   justify-content: center;
 
   &> button {
+    &> span {
+      margin-right: 5px;
+    }
     margin: 0 10px;
   }
 }
